--- a/composer.json
+++ b/composer.json
@@ -13,12 +13,12 @@
         "symfony/framework-bundle": "4.4.*",
         "symfony/orm-pack": "^1.0",
         "symfony/security-bundle": "4.4.*",
-        "symfony/web-server-bundle": "4.4.*",
         "symfony/yaml": "4.4.*"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.3",
-        "symfony/maker-bundle": "^1.14"
+        "symfony/maker-bundle": "^1.14",
+        "symfony/web-server-bundle": "4.4.*"
     },
     "config": {
         "preferred-install": {
