--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -2,21 +2,20 @@ security:
     encoders:
         App\Entity\User:
             algorithm: auto
-    # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
+
+    role_hierarchy:    
+        ROLE_ADMIN: ROLE_USER
+            
     providers:
         entity_provider:
             entity:
                 class: App\Entity\User
                 property: username
 
-
-        in_memory: { memory: null }
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
-        #main:
-            #anonymous: lazy
         login:
             pattern:  ^/login
             stateless: true
@@ -26,10 +25,10 @@ security:
                 success_handler: lexik_jwt_authentication.handler.authentication_success
                 failure_handler: lexik_jwt_authentication.handler.authentication_failure
 
-        #register:
-            #pattern:  ^/register
-            #stateless: true
-            #anonymous: true
+        register:
+            pattern:  ^/register
+            stateless: true
+            anonymous: true
 
         api:
             pattern:  ^/api
@@ -39,14 +38,9 @@ security:
             guard:
                 authenticators:
                     - lexik_jwt_authentication.jwt_token_authenticator
-            # activate different ways to authenticate
-            # https://symfony.com/doc/current/security.html#firewalls-authentication
 
-            # https://symfony.com/doc/current/security/impersonating_user.html
-            # switch_user: true
-
-    # Easy way to control access for large sections of your site
-    # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/register, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/api, roles: IS_AUTHENTICATED_FULLY  }
+        - { path: ^/docs, roles: IS_AUTHENTICATED_ANONYMOUSLY  }
